--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "quasar": "^1.0.0"
   },
   "devDependencies": {
-    "@quasar/app": "^2.0.0"
+    "@quasar/app": "^2.0.0",
+    "vuex": "^3.6.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
