--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
+    "devtron": "^1.4.0",
+    "electron": "^9.4.4",
+    "electron-debug": "^3.2.0",
+    "electron-devtools-installer": "^3.2.0",
     "vuex": "^3.6.0"
   },
   "browserslist": [
